# ssrando

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  SS Rando Logic - Glitched Requirements.yaml  SS Rando Logic - Glitchless Requirements.yaml  SS Rando Logic - Item Data.yaml  SS Rando Logic - Item Location.yaml  SS Rando Logic - Item Requirements.yaml  SS Rando Logic - Macros.yaml  SS Rando Logic - Requirements.yaml  SpoilerLog.py  appveyor.yml  apsettings.txt  beedle_texts.yaml  bzs.py  changedflags.md  changedflags.txt  checks.yaml  chestrando.py  colourReplace.py  custom_theme.json  dump.yaml  enemy_list.yaml  entrance_table.yaml  entrance_table2.yaml  entrances.yaml  eventpatches.yaml  extractmanager.py  extracts.yaml  gamepatches.py  hint_locations.yaml  hints.yaml  items.yaml  layerfixes.py  logic.py  miscstuff.py  music.yaml  musicrando.py  names.txt  (+37 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
arc-replacements/: README.md
asm/: assemble.py  custom_symbols.txt  disasm_rs.sh  elf.py  free_space_start_offsets.txt  gen_dol_rel_info.py  linker.ld  original_symbols.txt  patcher.py  rel_info.yaml
asm/custom-functions/: Cargo.toml  powerpc-unknown-eabi.json  rust-toolchain.toml  rustfmt.toml
asm/custom-functions/.cargo/: config.toml
asm/custom-functions/src/: filemanager_gen.rs  lib.rs  message.rs  text_print.rs
asm/custom-functions/src/game/: actor.rs  arc.rs  bird.rs  events.rs  file_manager.rs  flag_managers.rs  item.rs  message.rs  minigame.rs  mod.rs  player.rs  reloader.rs  save_file.rs  stage_info.rs
asm/custom-functions/src/information/: mod.rs  stage_info.rs
asm/custom-functions/src/menus/: main_menu.rs  mod.rs  sample_menu.rs  simple_menu.rs  warp_menu.rs
asm/custom-functions/src/rando/: custom_actor.rs  item_arc_loader.rs  mod.rs
asm/custom-functions/src/system/: button.rs  gx.rs  heap.rs  ios.rs  math.rs  mod.rs  ppc.rs  text_print.rs
asm/custom-functions/src/utils/: char_writer.rs  console.rs  graphics.rs  menu.rs  mod.rs  printf.rs
assets/: chest_image.tpl  logo.tpl  pause_00.brlyt  sandship_image.tpl
brresTools/: MDL0.py  TEX0.py  brres.py
docs/: changedflags.txt  pause-menu-brlyt.md  randomizer-changes.md  tablets-brlan.md
graph_logic/: assumed_fill.py  constants.py  hints.py  logic.py  logic_utils.py  old_logic.py  placement_file.py  placements.py  randomize.py
gui/: build_ui.bat  color_button.py  colour_button.py  custom_theme_dialog.py  custom_theme_dialog.ui  default_presets.json  default_theme.json  default_theme_info.yaml  guithreads.py  high_contrast_theme.json  location_descriptions.json  progressdialog.py  randogui.py  randogui.ui  sort_model.py  tricks_dialog.py  tricks_dialog.ui  ui_custom_theme_dialog.py  ui_randogui.py  ui_tricks_dialog.py
hints/: hint_distribution.py  hint_types.py  junk_hints.json
(+233 files in other folders)
